# MLFromScratch

./: .gitignore  README.md  dt.ipynb  gd.ipynb  knn.ipynb  logistic_regression.ipynb  mlr.ipynb  nb.ipynb  nn.ipynb  pca.ipynb  pyproject.toml  rag_from_scratch.py  sequence_modeling.ipynb
NN_MNIST/NN_MNIST/: Nearest_neighbor_MNIST.ipynb
NN_spine/NN_spine/: Nearest_neighbor_spine.ipynb  lr_scratch.ipynb  pytorch_basics.ipynb
