[tool.poetry]
name = "ml-from-scratch"
version = "0.1.0"
description = "Machine Learning implementations from scratch"
authors = ["Muntasir Rahman <email@example.com>"]
readme = "README.md"
packages = [{include = "ml_from_scratch"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.4"
matplotlib = "^3.10.7"
pandas = "^2.3.3"
scikit-learn = "^1.7.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"